Fix: 構造を見直し

--- a/style/style.css
+++ b/style/style.css
@@ -83,7 +83,7 @@ nav li:last-of-type {
 }
 
 #main_visual {
-  background: url(img/main_image.jpg) no-repeat center center;
+  background: url(image/main_image.jpg) no-repeat center center;
   display: table;
   height: 200px;
   margin-bottom: 40px;
