--- a/style/style.css
+++ b/style/style.css
@@ -124,7 +124,6 @@ h2 {
 
 p {
   text-align: justify;
-  text-indent: 1em;
 }
 
 footer {
@@ -162,6 +161,27 @@ footer li {
 
 footer li:last-of-type {
   margin-right: 0;
+}
+
+label {
+  display: block;
+}
+
+button, input, textarea {
+  font-size: 16px;
+}
+
+input[type=text] {
+  width: 400px;
+}
+
+input[type=datetime-local] {
+  width: 400px;
+}
+
+textarea {
+  width: 400px;
+  height: 200px;
 }
 
 #copyrights {
