--- a/2021/style/style.css
+++ b/2021/style/style.css
@@ -2,3 +2,16 @@
   width: 300px;
   height: auto;
 }
+
+.board_game_item button {
+  font-size: 1em;
+  background-color: transparent;
+  border: 0;
+  color: blue;
+  text-decoration: underline;
+}
+
+.selected_board_game img {
+  width: 500px;
+  height: auto;
+}
