--- a/2023/style/virtual-museum.css
+++ b/2023/style/virtual-museum.css
@@ -1,3 +1,9 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 #field {
     position: relative;
     width: 1024px;
@@ -42,4 +48,25 @@
 #staff_e {
     top: 550px;
     left: 700px;
+}
+
+.staff_a_conversation,
+.staff_b_conversation,
+.staff_c_conversation,
+.staff_d_conversation,
+.staff_e_conversation {
+    width: 100%;
+    height: 100%;
+    padding: 0 50px;
+}
+
+.option {
+    width: 100%;
+    height: 400px;
+}
+
+.dialog {
+    width: 100%;
+    height: 250px;
+    border: 1px solid black;
 }
