--- a/2023/style/virtual-museum.css
+++ b/2023/style/virtual-museum.css
@@ -63,6 +63,15 @@
 .option {
     width: 100%;
     height: 400px;
+    padding-top: 50px;
+}
+
+.option button {
+    display: block;
+    width: 50%;
+    height: 50px;
+    margin: 0 auto;
+    margin-bottom: 10px;
 }
 
 .dialog {
